Fix UI shift

--- a/src/app/components/PlantingTray.module.css
+++ b/src/app/components/PlantingTray.module.css
@@ -6,6 +6,7 @@
   border: 1px solid white;
   border-radius: 10px;
   padding: 20px;
+  width: 100%;
 }
 
 @media (prefers-color-scheme: light) {
@@ -19,5 +20,6 @@
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(4, 1fr);
+    width: 100%;
   }
 }
